# AfterTrace

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  README.md  _adjustment_window_8h_source.html  _application_8h_source.html  _data_window_8h_source.html  _i_window_8h_source.html  _i_window_layout_8h_source.html  _main_menu_bar_8h_source.html  _main_window_layout_8h_source.html  _parser_8h_source.html  _render_options_window_8h_source.html  _render_window_8h_source.html  _s_w_c_8h_source.html  _style_painter_8h_source.html  _vertex_8h_source.html  _writer_8h_source.html  annotated.html  build-osx  class_adjustment_window-members.html  class_adjustment_window.html  class_application-members.html  class_application.html  class_data_window-members.html  class_data_window.html  class_i_window-members.html  class_i_window.html  class_i_window_layout-members.html  class_i_window_layout.html  class_main_menu_bar-members.html  class_main_menu_bar.html  class_main_window_layout-members.html  class_main_window_layout.html  class_parser-members.html  class_parser.html  class_render_options_window-members.html  class_render_options_window.html  (+26 more)
config/: Doxyfile  doxygen-scribe  publish-doxygen  travisci_rsa.enc  travisci_rsa.pub
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_2.js  classes_3.js  classes_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_9.js  searchdata.js
sources/: Application.cpp  Application.h  Parser.cpp  Parser.h  SWC.cpp  SWC.h  Vertex.cpp  Vertex.h  imgui_impl_glfw_gl3.cpp  main.cpp
sources/FileIO/: Parser.cpp  Parser.h  Writer.cpp  Writer.h
sources/GUI/: IWindowLayout.cpp  IWindowLayout.h  MainWindowLayout.cpp  MainWindowLayout.h  StylePainter.cpp  StylePainter.h
sources/GUI/MenuBar/: MainMenuBar.cpp  MainMenuBar.h
sources/GUI/Window/: AdjustmentWindow.cpp  AdjustmentWindow.h  DataWindow.cpp  DataWindow.h  IWindow.cpp  IWindow.h  RenderOptionsWindow.cpp  RenderOptionsWindow.h  RenderWindow.cpp  RenderWindow.h
sources/ImGuiImpl/: imgui_impl_glfw_gl3.cpp
sources/Model/: SWC.cpp  SWC.h  Vertex.cpp  Vertex.h
